@@ -1,5 +1,7 @@
 DFHack future
 
+  New scripts:
+    - masspit: designate caged creatures in a zone for pitting
   Misc improvements:
     - exterminate: renamed from slayrace, add help message
 
